_sources/api/gen/other/2.9.1/classes/domain_Location.Location.md.txt
# Class: Location

[domain/Location](../modules/domain_Location.md).Location

## Constructors

### constructor

**new Location**(`latitude`, `longitude`, `timestamp`)

Location on a map

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `latitude` | `number` | latitude coordinate of the location |
| `longitude` | `number` | longitude coordinate of the location |
| `timestamp` | `Date` | time the location was provided (ERRATA: this can in some cases be a number instead of a Date) |

## Properties

### latitude

 **latitude**: `number`

latitude coordinate of the location

___

### longitude

 **longitude**: `number`

longitude coordinate of the location

___

### timestamp

 **timestamp**: `Date`

time the location was provided (ERRATA: this can in some cases be a number instead of a Date)

## Methods

### fromJSON

`Static` **fromJSON**(`loc`): [`Location`](domain_Location.Location.md)

Create from JSON

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `loc` | `any` | JSON object |

#### Returns

[`Location`](domain_Location.Location.md)
